--- a/style.css
+++ b/style.css
@@ -142,6 +142,8 @@
     font-size: 20px;
 }
 .color{
+    
+    height: 700px;
     display: flex;
     justify-content: center;
     background-color: orange;
